--- a/src/app/restaurant-detail/reviews/reviews.component.html
+++ b/src/app/restaurant-detail/reviews/reviews.component.html
@@ -8,7 +8,7 @@
         <div class="user-block">
         
           <img  *ngIf="review.rating < 3" alt="User Image"  class="img-circle" src="assets/img/reactions/pissed.png">
-          <img *ngIf="review.rating  > 3 && review.rating < 4" alt="User Image" class="img-circle" src="assets/img/reactions/soso.png">
+          <img *ngIf="review.rating  >= 3 && review.rating < 4" alt="User Image" class="img-circle" src="assets/img/reactions/soso.png">
           <img *ngIf="review.rating >= 4" alt="User Image" class="img-circle" src="assets/img/reactions/loved.png">
 
           <span class="username">{{review.name}}</span>
